# caiwu-agent

./: AGENT_DATA_FLOW_ANALYSIS.md  CHANGELOG.md  CHART_AI_AGENT_IMPROVEMENT_COMPLETE_REPORT.md  CHART_GENERATION_FIX_REPORT.md  CONTRIBUTING.md  DATA_ANALYSIS_AGENT_SOLUTION_REPORT.md  DEPLOYMENT_GUIDE.md  FINANCIAL_ANALYSIS_TOOL_FIX_COMPLETE_REPORT.md  PDF_GENERATION_FIX_REPORT.md  README.md  TESTING_SUMMARY.md  WORK_AGENTS_BOUNDARY_TEST_REPORT.md  WORK_AGENTS_DIAGNOSIS_REPORT.md  chart_data_builder.py  chart_data_validator.py  cleansing_config_test_report.json  content_sanitizer.py  data_cleansing_config_test_summary.json  data_cleansing_implementation_report.json  enhanced_chart_generator.py  enhanced_pdf_generator.py  filename_sanitizer.py  final_system_verification.py  pyproject.toml  simple_cleansing_test.py  simple_test_trend.py  test_chart_agent_improvements.py  test_chart_fix.py  test_chart_generator.py  test_chart_improvements_simple.py  test_chart_simple.py  test_cleansing_config.py  test_cleansing_main.py  test_complete_workflow.py  test_config_load.py  test_config_validation.py  test_core_financial_fix.py  test_core_functionality.py  test_data_analysis_fixes.py  test_data_cleansing_simple.py  (+24 more)
configs/agents/examples/: stock_analysis_final.yaml  stock_analysis_final_with_cleansing.yaml
configs/agents/workers/: chart_generator_agent.yaml  data_agent.yaml  data_analysis_agent.yaml  data_cleanser_agent.yaml  financial_analysis_agent.yaml  report_agent.yaml  standard_agent_config.yaml  standard_data_formats.yaml  standard_error_handling.yaml  tool_behavior_strategies.yaml  workspace_management.yaml
configs/tools/: enhanced_chart_generator.yaml
docs/: SYNC_UPSTREAM.md  TESTING.md
examples/: test_financial_fixes.py  test_nested_html_pdf.py
examples/stock_analysis/: UV_TESTING_REPORT.md  chinese_financial_test_cases.json  chinese_test_cases.py  chinese_test_cases_fixed.py  main_with_cleansing.py  main_with_cleansing_fixed.py  test_cases_validation_report.json  test_cleansing_uv_fixed.py  test_cleansing_with_uv.py  test_simple_analysis.py  uv_cleansing_test_report.json
examples/stock_analysis/stock_analysis_workspace/: stock_analysis_report.txt  目标公司_财务分析报告_20251027120639.md  陕西建工_财务分析报告_20251027121550.md  陕西建工_财务分析报告_20251027124042.md  陕西建工_财务分析报告_20251027133543.md  陕西建工_财务分析报告_20251027143107.md  陕西建工_财务分析报告_20251027152728.md  陕西建工_财务分析报告_20251120202412.md  陕西建工多维度财务指标雷达图生成完成_我已成功为陕西建工_财务分析报告_20251027131130.md
nexus-财务智能体/: README.md  app.py  app_v3.py  test_integration.py
test_output/: 陕西建工财务分析20251027分析报告.md
utu/: __init__.py
utu/agents/: data_cleanser_agent.py  enhanced_data_analysis_agent.py
utu/context_compression/: __init__.py  intelligent_compressor.py
utu/data_conversion/: __init__.py  universal_converter.py
utu/data_engineering/: __init__.py  quality_monitor.py  transform_pipeline.py  validation_pipeline.py
utu/debugging/: __init__.py  data_flow_debugger.py
utu/financial_data_cache/: cache_metadata.json
utu/schemas/: __init__.py  agent_schemas.py  data_cleansing_schemas.py
utu/tools/: __init__.py  data_cleansing_toolkit.py  enhanced_chart_generator.py  financial_analysis_toolkit.py  financial_data_converter.py  report_saver_toolkit.py  tabular_data_toolkit.py
